--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
+  "name": "paypal-fee-solid",
+  "version": "0.0.1",
+  "description": "PayPal fee calculator",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -14,8 +14,7 @@
     "fs-extra": "^10.0.0",
     "inquirer": "^8.1.2",
     "vite": "^2.3.8",
-    "vite-plugin-solid": "^2.0.0",
-    "wrench": "^1.5.9"
+    "vite-plugin-solid": "^2.0.0"
   },
   "dependencies": {
     "@types/node": "^16.3.2",
