--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^16.3.2",
     "path": "^0.12.7",
     "solid-js": "^1.0.0",
-    "solid-styled-components": "^0.27.1"
+    "solid-styled-components": "^0.27.1",
+    "solidjs-icons": "^0.0.3"
   }
 }
